<resources>
    <string name="app_name"                 >GeoBot</string>
    <string name="snackbar_example"         >Snackbar example</string>
    <string name="ygps_app_name"            >GeoBot YGPS Skyplot</string>
    <string name="gps_app_name"             >GPS Skyplot</string>
    <string name="title_activity_gb_collect_points_maps">Map</string>
    <string name="double_value"         >%d</string>
    <string name="point_id_fillin"      >Point ID = %d</string>
    <string name="save_label"           >Save</string>
    <string name="convergence_label"        >Conv: </string>
    <string name="scale_factor_label"       >Scale: </string>
    <string name="unused_button_label"  > </string>
    <string name="no_points_in_project" >No Points in Project</string>
    <string name="exchange_subject"     >Exchange for Project </string>
    <string name="email_message_prologue_1">This email contains CDF for Project:</string>
    <string name="email_message_prologue_2"> and any points it contains</string>
    <string name="project_not_open">Project must be open</string>
    <string name="project_not_open_to_list_points">Project must be open to list points</string>
    <string name="project_opened">Open Project ID =   </string>
    <string name="cogo_project_must_be_open">Project must be open to add points</string>
    <string name="no_project_open">No Project Open</string>
    <string name="collect_project_must_be_open">Project must be Open to collect points</string>
    <string name="coordinate_not_valid"        >Coordinate not valid, point not saved</string>
    <string name="error_adding_point"          >Could not add point to DB</string>
    <string name="programming_error"            >Programming Error</string>
    <string name="database_context_exception">Can\'t create database without a context</string>
    <string name="database_access_exception1">Attempt to access the database before it has been initialized</string>
    <string name="database_access_exception2">Attempt to access the database before it has been opened</string>
    <string name="project_missing_exception" >Something is wrong, project does not exist</string>
    <string name="no_projects"               >No projects defined</string>
    <string name="no_pictures"               >No pictures defined</string>
    <string name="no_points"                 >No points defined</string>
    <string name="date_hint"                 >Must use proper date input</string>
    <string name="test_data_invalid"         >Test Data Not Valid</string>
    <string name="error_adding_picture_to_db">Error adding picture to DB, picture not saved</string>
    <string name="error_removing_point"      >Error removing point from project</string>
    <string name="missing_picture_file"      >Missing Picture File: </string>
    <string name="action_home"              >Home</string>
    <string name="action_splash"            >GeoBot</string>
    <string name="action_project"           >Project</string>
    <string name="action_project_create"    >Project Create</string>
    <string name="action_project_edit"      >Project Edit</string>
    <string name="action_project_open"      >Project Open</string>
    <string name="action_project_list"      >Project List</string>
    <string name="action_point_list"        >Point List</string>
    <string name="action_point_edit"        >Point Edit</string>
    <string name="action_map_points"        >Map Points</string>
    <string name="action_project_export"    >Export Project</string>
    <string name="action_collect"           >Collect</string>
    <string name="action_stakeout"          >Stakeout</string>
    <string name="action_cogo"              >COGO</string>
    <string name="action_maps"              >Maps</string>
    <string name="action_skyplots"          >Skyplots</string>
    <string name="action_config"            >Config</string>
    <string name="action_settings"          >Settings</string>
    <string name="action_help"              >Help</string>
    <string name="action_convert"           >Convert</string>
    <string name="subtitle_home"            >Home</string>
    <string name="subtitle_create_project"  >Create Project</string>
    <string name="subtitle_open_project"    >Open Project</string>
    <string name="subtitle_copy_project"    >Copy Project</string>
    <string name="subtitle_edit_project"    >Edit Project</string>
    <string name="subtitle_delete_project"  >Delete Project</string>
    <string name="subtitle_error_in_path"   >Error in Project Path through App. Please send report</string>
    <string name="subtitle_maintain_project">Maintain Project</string>
    <string name="subtitle_maintain_point"  >Maintain Point</string>
    <string name="subtitle_create_point"    >Create Point</string>
    <string name="subtitle_open_point"      >Open Point</string>
    <string name="subtitle_copy_point"      >Copy Point</string>
    <string name="subtitle_edit_point"      >Edit Point</string>
    <string name="subtitle_delete_point"    >Delete Point</string>
    <string name="subtitle_show_point"      >Show Point</string>
    <string name="subtitle_collect_points"  >Collect Points</string>
    <string name="subtitle_collect"                 >Collect</string>
    <string name="subtitle_cogo"                    >COGO</string>
    <string name="subtitle_configurations"          >Configurations</string>
    <string name="subtitle_points"                  >Points</string>
    <string name="subtitle_projects"                >Projects</string>
    <string name="subtitle_settings"                >Settings</string>
    <string name="subtitle_skyplots"                >Skyplot</string>
    <string name="subtitle_stakeout"                >Stakeout</string>
    <string name="subtitle_maps"                    >Maps</string>
    <string name="subtitle_support"                 >Support</string>
    <string name="subtitle_general_settings"        >General Settings</string>
    <string name="subtitle_compass"                 >Compass</string>
    <string name="subtitle_global_settings"         >Global Settings</string>
    <string name="subtitle_project_settings"        >Project Settings</string>
    <string name="subtitle_list_nmea"               >List NMEA Sentences</string>
    <string name="subtitle_list_satellites"         >List Visible Satellites</string>
    <string name="subtitle_gps_nmea"                >GPS data from NMEA</string>
    <string name="subtitle_workflow"                >Coordinate Workflow</string>
    <string name="subtitle_measure"                 >Measure Coordinate</string>
    <string name="subtitle_raw_data"                >Raw Meaned Data</string>
    <string name="subtitle_export"                  >Export Project Points</string>
    <string name="subtitle_unknown_error"           >Unknown Error</string>
    <string name="action_measure_points">Measure Points</string>
    <string name="action_open">Open</string>
    <string name="action_edit">Edit</string>
    <string name="action_global_settings"           >Global_Settings</string>
    <string name="action_project_default_settings"  >Project_Defaults</string>
    <string name="action_delete">Delete</string>
    <string name="latitude_out_of_range">Latitude out of range</string>
    <string name="longitude_out_of_range">Longitude out of range</string>
    <string name="coordinate_invalid">Coordinate out of range</string>
    <string name="coordinate_try_again">Coordinates not valid, please input again</string>
    <string name="splash_opened_proj"       >Proceed to open project</string>
    <string name="splash_product_version" formatted="false"   >GeoBot version: %s</string>
    <string name="splash_db_version" formatted="false"        >DB Schema %s Version: %d</string>
    <string name="splash_constants_version" formatted="false" >Conversion version: %s</string>
    <string name="projects_button_label"    >Project</string>
    <string name="collect_button_label"     >Collect</string>
    <string name="stakeout_button_label"    >Stakeout</string>
    <string name="cogo_button_label"        >COGO</string>
    <string name="maps_button_label"        >Maps</string>
    <string name="skyplot_button_label"     >Skyplot</string>
    <string name="config_button_label"      >Configuration</string>
    <string name="settings_button_label"    >Settings</string>
    <string name="help_button_label"        >Support</string>
    <string name="groundstation_contentdescription"     >Ground Station Icon</string>
    <string name="maps_single_point_contentdescription" >Single point highlighted on map</string>
    <string name="create_button_label"          >Create</string>
    <string name="open_button_label"            >Open</string>
    <string name="copy_button_label"            >Copy</string>
    <string name="edit_button_label"            >Edit</string>
    <string name="delete_button_label"          >Delete</string>
    <string name="control_button_label"         >Control</string>
    <string name="maintain_points_button_label" >Maintain Points</string>
    <string name="list_points_button_label"     >List Points</string>
    <string name="feature_codes_button_label"   >Feature Codes</string>
    <string name="exchange_button_label"        >Exchange</string>
    <string name="unrecognized_path_encountered">Unrecognized Path Encountered: </string>
    <string name="delete_path_1">Selected Project </string>
    <string name="point_row_point_nb_label"     >Point Nb</string>
    <string name="point_row_easting_label"      >Easting</string>
    <string name="point_row_northing_label"     >Northing</string>
    <string name="point_row_elevation_label"    >Elevation</string>
    <string name="point_row_feature_code_label" >FC</string>
    <string name="autosave_on_label"        >autosave</string>
    <string name="autosave_off_label"       >manual save</string>
    <string name="autosave_label"           >   Automatic Save   </string>
    <string name="terminology_label"        >    Terminology    </string>
    <string name="rms_label"                >RMS</string>
    <string name="std_label"                >StdDev</string>
    <string name="coord_ord_label"          >     Coord Order     </string>
    <string name="coord_ord_on_label"       >Lat / Lng</string>
    <string name="coord_ord_off_label"      >Lng / Lat</string>
    <string name="coord_ne_ord_label"       >     Coord Order     </string>
    <string name="coord_ne_ord_on_label"    >NorthingEasting</string>
    <string name="coord_ne_ord_off_label"   >EastingNorthing</string>
    <string name="dd_dms_label"             >       Location      </string>
    <string name="dd_dms_on_label"          >DD</string>
    <string name="dd_dms_off_label"         >DMS</string>
    <string name="hemisph_label"            > Hemisphere </string>
    <string name="hemisph_on_label"         >NSEW</string>
    <string name="hemisph_off_label"        >+/-</string>
    <string name="ca_label"                 > Convergence Angle </string>
    <string name="latitude_label"           >Lat:  </string>
    <string name="type_decimal_degrees_label"    >Decimal Degrees</string>
    <string name="type_hemisphere_label"         >H</string>
    <string name="type_lat_dir"                  >NS</string>
    <string name="type_lng_dir"                  >EW</string>
    <string name="type_degrees_label"            >Deg</string>
    <string name="type_minutes_label"            >Min</string>
    <string name="type_seconds_label"            >Sec</string>
    <string name="ui_precision"                  >Digits of Precision for User Interface</string>
    <string name="exc_switch_proj_loc_prc"       >Loc Precision</string>
    <string name="exc_switch_proj_std_prc"       >RMS Precision</string>
    <string name="exc_switch_proj_ca_prc"        >Convergence Precision</string>
    <string name="exc_switch_proj_sf_prc"        >Scale Factor Precision</string>
</resources>