<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    tools:context="com.asc.msigeosystems.prism4d.MainPrism4DActivity">

    <item
        android:id="@+id/action_home"
        android:title="@string/action_home"
        app:showAsAction="never"
        />
    <item
        android:id="@+id/action_project_create"
        android:title="@string/action_project_create"
        app:showAsAction="never"
        />
    <item
        android:id="@+id/action_project_open"
        android:title="@string/action_project_open"
        app:showAsAction="never"
        />
    <item
        android:id="@+id/action_project_edit"
        android:title="@string/action_project_edit"
        app:showAsAction="never"
        />
    <item
        android:id="@+id/action_point_measure"
        android:title="@string/action_point_edit"
        app:showAsAction="never"
        />
    <item
        android:id="@+id/action_map_points"
        android:title="@string/action_map_points"
        app:showAsAction="never"
        />
    <item
        android:id="@+id/action_point_list"
        android:title="@string/action_point_list"
        app:showAsAction="never"
        />
    <item
        android:id="@+id/action_project_export"
        android:title="@string/action_project_export"
        app:showAsAction="never"
        />

    <item
        android:id="@+id/action_settings"
        android:title="@string/action_global_settings"
        app:showAsAction="never"
        />


</menu>
