<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android               = "http://schemas.android.com/apk/res/android"
    android:id                  = "@+id/ll_dms"
    android:orientation         = "horizontal"
    android:layout_width        = "match_parent"
    android:layout_height       = "wrap_content"
    android:layout_marginBottom = "@dimen/row_between_rows_margin"
    >

        <!-- | decimal degrees | degrees | minutes | seconds | -->
        <!-- Latitude Label by default, change text if longitude -->
        <!-- ll_label -->
        <TextView
            android:id            = "@+id/ll_label"
            android:text          = "@string/latitude_label"
            android:layout_height = "wrap_content"
            android:layout_width  = "0dp"
            android:layout_weight = "15"
            android:gravity       = "end"
            android:layout_marginStart="@dimen/row_cap_margin"

            android:textColor     = "@color/colorTextBlack"
            android:background    = "@color/colorScreenBackground"
            />

        <!-- Direction 5 -->
        <EditText
            android:id="@+id/ll_dir"
            android:hint="@string/type_hemisphere_label"

            android:layout_height="wrap_content"
            android:layout_width="0dp"
            android:layout_weight="5"
            android:gravity="center"

            android:enabled="false"
            android:inputType="textCapCharacters"

            android:layout_marginEnd="@dimen/row_between_fields_margin"

            android:textColor="@color/colorTextBlack"
            android:background="@color/colorGrayish"
            />

        <!-- Decimal Degrees ll_dd_input -->
        <EditText
            android:id               = "@+id/ll_dd_input"
            android:hint             = "@string/type_decimal_degrees_label"

            android:layout_height    = "wrap_content"
            android:layout_width     = "0dp"
            android:layout_weight    = "60"
            android:gravity          = "center"

            android:layout_marginEnd = "@dimen/row_between_fields_margin"

            android:inputType        = "numberSigned|numberDecimal"
            android:enabled          = "false"

            android:textColor        = "@color/colorTextBlack"
            android:background       = "@color/colorGrayish"
            />

        <!-- degrees ll_d_input -->
        <EditText
            android:id            = "@+id/ll_d_Input"
            android:hint          = "@string/type_degrees_label"
            android:layout_height = "wrap_content"
            android:layout_width  = "0dp"
            android:layout_weight = "15"
            android:gravity       = "center"

            android:layout_marginEnd   = "@dimen/row_between_fields_margin"
            android:enabled       = "false"

            android:inputType     = "numberSigned|number"

            android:textColor     = "@color/colorTextBlack"
            android:background    = "@color/colorGrayish"
            />

        <!-- minutes ll_m_input -->
        <EditText
            android:id            = "@+id/ll_m_Input"
            android:hint          = "@string/type_minutes_label"
            android:layout_height = "wrap_content"
            android:layout_width  = "0dp"
            android:layout_weight = "15"
            android:gravity       = "center"

            android:layout_marginEnd   = "@dimen/row_between_fields_margin"
            android:enabled       = "false"

            android:inputType     = "numberSigned|number"

            android:textColor     = "@color/colorTextBlack"
            android:background    = "@color/colorGrayish"
            />

        <!-- seconds ll_s_input -->
        <EditText
            android:id            = "@+id/ll_s_Input"
            android:hint          = "@string/type_seconds_label"
            android:layout_height = "wrap_content"
            android:layout_width  = "0dp"
            android:layout_weight = "35"
            android:gravity       = "center"

            android:layout_marginEnd   = "@dimen/row_cap_margin"
            android:enabled       = "false"

            android:inputType     = "numberSigned|numberDecimal"

            android:textColor     = "@color/colorTextBlack"
            android:background    = "@color/colorGrayish"
        />

</LinearLayout>